fixed issue with too long th columns in debugger
fixes #1787

--- a/extensions/yii/debug/assets/main.css
+++ b/extensions/yii/debug/assets/main.css
@@ -28,12 +28,12 @@ ul.trace {
 	float: right;
 }
 
-td {
+td, th {
 	white-space: pre-line;
 	word-wrap: break-word;
 }
 
-th {
+.detail-grid-view th {
     white-space: nowrap;
 }
 
